# api/docs/swagger.json
@@ -14,29 +14,6 @@
     "host": "localhost:8070",
     "basePath": "/v1",
     "paths": {
-        "/customer/list": {
-            "get": {
-                "description": "this func get all users",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "get all users",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/user.UsersResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/user": {
             "post": {
                 "description": "this func create user",
@@ -66,6 +43,29 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/user.UserResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/list": {
+            "get": {
+                "description": "this func get all users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "get all users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.UsersResponse"
                         }
                     }
                 }
